gcp/ingress/monitoring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /grafana(/.*)?
        pathType: ImplementationSpecific
        backend:
          service:
            name: monitor-v1-grafana
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-alertmanager-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /prometheus(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: monitor-v1-kube-prometheus-prometheus
            port:
              number: 9090
      - path: /alertmanager(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: monitor-v1-kube-prometheus-alertmanager
            port:
              number: 9093
