gcp/ingress/prediction-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prediction-api-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx  # Đây là ingressClass mặc định nếu bạn dùng nginx ingress controller
  rules:
    - http:
        paths:
          - path: /prediction-api/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: prediction-api
                port:
                  number: 8000
