gcp/ingress/streamlit-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streamlit-app-ingress
  namespace: streamlit
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /streamlit-app(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: streamlit-app
            port:
              number: 8501
